# ss_llm

tao_capture/: Makefile  README.md  pyproject.toml
tao_capture/docs/: mkdocs.yml
tao_capture/docs/docs/: index.md
tao_capture/notebooks/: SS.ipynb
tao_capture/tao_capture/: __init__.py  dataset.py  features.py  plots.py
tao_capture/tao_capture/modeling/: predict.py  train.py
